--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,12 +74,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+   - family: Open Sans
+     fonts:
+       - asset: assets/fonts/OpenSans.ttf
+  #         - asset: fonts/Schyler-Italic.ttf
   #         style: italic
+   - family: Caveat
+     fonts:
+       - asset: assets/fonts/Caveat.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
