Added Icons and updated application name.

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "delimeals",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#FFFFFF",
+    "theme_color": "#DFC6D0",
     "description": "Simple meals app created for learning flutter",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
